Bug 1625478 - Convert appMenu* strings from browser.dtd to appmenu.ftl. r=mtigley,fluent-reviewers,flod
Differential Revision: https://phabricator.services.mozilla.com/D123167

UltraBlame original commit: 5d2f493454349e61214b51e1bd2aefd20673eae1

--- a/browser/base/content/appmenu-viewcache.inc.xhtml
+++ b/browser/base/content/appmenu-viewcache.inc.xhtml
@@ -1392,14 +1392,16 @@ subviewbutton
 -
 nav
 "
-label
+data
+-
+l10n
+-
+id
 =
 "
-&
-appMenuHelp
-.
-label
-;
+appmenuitem
+-
+help
 "
 closemenu
 =
@@ -4545,62 +4547,16 @@ remotetabs
 -
 tabslist
 "
-showAllLabel
-=
-"
-&
-appMenuRemoteTabs
-.
-showAll
-.
-label
-;
-"
-showAllTooltipText
-=
-"
-&
-appMenuRemoteTabs
-.
-showAll
-.
-tooltip
-;
-"
-showMoreLabel
+notabsforclientlabel
 =
 "
 appmenu
 -
-fxa
--
-show
--
-more
+remote
 -
 tabs
-"
-showMoreTooltipText
-=
-"
-&
-appMenuRemoteTabs
-.
-showMore
-.
-tooltip
-;
-"
-notabsforclientlabel
-=
-"
-&
-appMenuRemoteTabs
-.
+-
 notabs
-.
-label
-;
 "
 /
 >
@@ -4756,14 +4712,22 @@ instruction
 -
 label
 "
->
-&
-appMenuRemoteTabs
-.
+data
+-
+l10n
+-
+id
+=
+"
+appmenu
+-
+remote
+-
+tabs
+-
 tabsnotsyncing
-.
-label
-;
+"
+>
 <
 /
 label
@@ -4798,16 +4762,20 @@ tabsdisabledpane
 -
 button
 "
-label
+data
+-
+l10n
+-
+id
 =
 "
-&
-appMenuRemoteTabs
-.
-opensyncprefs
-.
-label
-;
+appmenu
+-
+remote
+-
+tabs
+-
+opensettings
 "
 oncommand
 =
@@ -4930,14 +4898,22 @@ instruction
 -
 label
 "
->
-&
-appMenuRemoteTabs
-.
+data
+-
+l10n
+-
+id
+=
+"
+appmenu
+-
+remote
+-
+tabs
+-
 noclients
-.
-subtitle
-;
+"
+>
 <
 /
 label
@@ -4966,16 +4942,20 @@ remotetabs
 -
 button
 "
-label
+data
+-
+l10n
+-
+id
 =
 "
-&
-appMenuRemoteTabs
-.
+appmenu
+-
+remote
+-
+tabs
+-
 connectdevice
-.
-label
-;
 "
 oncommand
 =
@@ -5111,14 +5091,22 @@ instruction
 -
 label
 "
->
-&
-appMenuRemoteTabs
-.
+data
+-
+l10n
+-
+id
+=
+"
+appmenu
+-
+remote
+-
+tabs
+-
 welcome
-.
-label
-;
+"
+>
 <
 /
 label
@@ -5257,14 +5245,22 @@ instruction
 -
 label
 "
->
-&
-appMenuRemoteTabs
-.
+data
+-
+l10n
+-
+id
+=
+"
+appmenu
+-
+remote
+-
+tabs
+-
 welcome
-.
-label
-;
+"
+>
 <
 /
 label
@@ -5404,14 +5400,22 @@ instruction
 -
 label
 "
->
-&
-appMenuRemoteTabs
-.
+data
+-
+l10n
+-
+id
+=
+"
+appmenu
+-
+remote
+-
+tabs
+-
 welcome
-.
-label
-;
+"
+>
 <
 /
 label
@@ -5549,14 +5553,22 @@ instruction
 -
 label
 "
->
-&
-appMenuRemoteTabs
-.
+data
+-
+l10n
+-
+id
+=
+"
+appmenu
+-
+remote
+-
+tabs
+-
 unverified
-.
-label
-;
+"
+>
 <
 /
 label
@@ -5583,16 +5595,20 @@ unverified
 -
 button
 "
-label
+data
+-
+l10n
+-
+id
 =
 "
-&
-appMenuRemoteTabs
-.
-opensyncprefs
-.
-label
-;
+appmenu
+-
+remote
+-
+tabs
+-
+opensettings
 "
 oncommand
 =
@@ -6339,62 +6355,16 @@ remotetabs
 -
 tabslist
 "
-showAllLabel
-=
-"
-&
-appMenuRemoteTabs
-.
-showAll
-.
-label
-;
-"
-showAllTooltipText
-=
-"
-&
-appMenuRemoteTabs
-.
-showAll
-.
-tooltip
-;
-"
-showMoreLabel
+notabsforclientlabel
 =
 "
 appmenu
 -
-fxa
--
-show
--
-more
+remote
 -
 tabs
-"
-showMoreTooltipText
-=
-"
-&
-appMenuRemoteTabs
-.
-showMore
-.
-tooltip
-;
-"
-notabsforclientlabel
-=
-"
-&
-appMenuRemoteTabs
-.
+-
 notabs
-.
-label
-;
 "
 /
 >
@@ -6876,16 +6846,20 @@ signin
 -
 button
 "
-label
+data
+-
+l10n
+-
+id
 =
 "
-&
-appMenuRemoteTabs
-.
+appmenu
+-
+remote
+-
+tabs
+-
 connectdevice
-.
-label
-;
 "
 oncommand
 =
