--- a/parser/htmlparser/tests/mochitest/test_bug672453.html
+++ b/parser/htmlparser/tests/mochitest/test_bug672453.html
@@ -186,6 +186,11 @@ file_bug672453_http_unsupported
 html
 "
 "
+file_bug672453_bomless_utf16
+.
+html
+"
+"
 file_bug672453_meta_utf16
 .
 html
@@ -549,6 +554,91 @@ tests
 mochitest
 /
 file_bug672453_http_unsupported
+.
+html
+"
+lineNumber
+:
+0
+isWarning
+:
+false
+}
+{
+errorMessage
+:
+"
+Detected
+UTF
+-
+16
+-
+encoded
+Basic
+Latin
+-
+only
+text
+without
+a
+byte
+order
+mark
+and
+without
+a
+transfer
+protocol
+-
+level
+declaration
+.
+Encoding
+this
+content
+in
+UTF
+-
+16
+is
+inefficient
+and
+the
+character
+encoding
+should
+have
+been
+declared
+in
+any
+case
+.
+"
+sourceName
+:
+"
+http
+:
+/
+/
+mochi
+.
+test
+:
+8888
+/
+tests
+/
+parser
+/
+htmlparser
+/
+tests
+/
+mochitest
+/
+file_bug672453_bomless_utf16
 .
 html
 "
