Bug 1727944 - Add a random query parameter to the remote font URL that needs to load slowly in css-fonts/fallback-remote-to-data-url.html, to avoid getting a cached result. r=emilio
Differential Revision: https://phabricator.services.mozilla.com/D123895

UltraBlame original commit: 5f53850d83ad946a801704dc802b44a16a339e3b

--- a/testing/web-platform/tests/css/css-fonts/fallback-remote-to-data-url.html
+++ b/testing/web-platform/tests/css/css-fonts/fallback-remote-to-data-url.html
@@ -149,8 +149,181 @@ js
 script
 >
 <
+style
+>
+#
+target
+#
+not
+-
+covered
+{
+font
+:
+25px
+/
+1
+remote
+-
+font
+data
+-
+font
+monospace
+;
+}
+<
+/
+style
+>
+<
 script
 >
+/
+/
+Create
+the
+style
+rule
+for
+remote
+-
+font
+with
+a
+random
+query
+parameter
+added
+/
+/
+to
+avoid
+potentially
+loading
+the
+font
+from
+cache
+(
+too
+quickly
+)
+if
+the
+test
+/
+/
+is
+run
+repeatedly
+.
+let
+style
+=
+document
+.
+createElement
+(
+"
+style
+"
+)
+;
+let
+randomParam
+=
+"
+random
+=
+"
++
+Math
+.
+random
+(
+)
+;
+style
+.
+textContent
+=
+font
+-
+face
+{
+font
+-
+family
+:
+remote
+-
+font
+;
+/
+*
+Set
+a
+long
+delay
+to
+make
+sure
+it
+doesn
+'
+t
+finish
+loading
+*
+/
+src
+:
+url
+(
+'
+/
+fonts
+/
+Revalia
+.
+woff
+?
+pipe
+=
+trickle
+(
+d1
+)
+&
+{
+randomParam
+}
+'
+)
+format
+(
+'
+woff
+'
+)
+;
+font
+-
+display
+:
+swap
+;
+}
+document
+.
+documentElement
+.
+appendChild
+(
+style
+)
+;
 /
 /
 Ahem
@@ -384,97 +557,6 @@ load
 <
 /
 script
->
-<
-style
->
-font
--
-face
-{
-font
--
-family
-:
-remote
--
-font
-;
-/
-*
-Set
-a
-long
-delay
-to
-make
-sure
-it
-doesn
-'
-t
-finish
-loading
-*
-/
-src
-:
-url
-(
-'
-/
-fonts
-/
-Revalia
-.
-woff
-?
-pipe
-=
-trickle
-(
-d1
-)
-'
-)
-format
-(
-'
-woff
-'
-)
-;
-font
--
-display
-:
-swap
-;
-}
-#
-target
-#
-not
--
-covered
-{
-font
-:
-25px
-/
-1
-remote
--
-font
-data
--
-font
-monospace
-;
-}
-<
-/
-style
 >
 <
 span
