Bug 1609558 - Migrate panelUI.inc.xhtml to Fluent. r=mtigley,fluent-reviewers,flod
Differential Revision: https://phabricator.services.mozilla.com/D123837

UltraBlame original commit: 29ade839896bb828ecd55a5c19ea3e053348255e

--- a/browser/base/content/browser.xhtml
+++ b/browser/base/content/browser.xhtml
@@ -1123,6 +1123,24 @@ localization
 href
 =
 "
+browser
+/
+panelUI
+.
+ftl
+"
+/
+>
+<
+link
+rel
+=
+"
+localization
+"
+href
+=
+"
 preview
 /
 interventions
