Bug 1725802 - Make `IMEContentObserver` create a sender of notifications when there are pending notifications, but not in the queue r=smaug
The root cause of the bug is that
`IMEContentObserver::FlushMergeableNotifications()` does not enqueue focus
notification for IME here:
https://searchfox.org/mozilla-central/rev/5a362eb7d054740dc9d7c82c79a2efbc5f3e4776/dom/events/IMEContentObserver.cpp#1350-1351,1357
because editor is handling an edit action to insert dropped content:
https://searchfox.org/mozilla-central/rev/5a362eb7d054740dc9d7c82c79a2efbc5f3e4776/dom/events/IMEContentObserver.cpp#1343
https://searchfox.org/mozilla-central/rev/5a362eb7d054740dc9d7c82c79a2efbc5f3e4776/editor/libeditor/EditorBase.cpp#4466-4468
but focus is changed to the editor:
https://searchfox.org/mozilla-central/rev/5a362eb7d054740dc9d7c82c79a2efbc5f3e4776/editor/libeditor/EditorBase.cpp#4552-4554
and then, "focus" event listener of editor calls
`IMEStateManager::OnFocusInEditor()`:
https://searchfox.org/mozilla-central/rev/5a362eb7d054740dc9d7c82c79a2efbc5f3e4776/editor/libeditor/EditorEventListener.cpp#1160
and it tries to send focus notification of IME again:
https://searchfox.org/mozilla-central/rev/5a362eb7d054740dc9d7c82c79a2efbc5f3e4776/dom/events/IMEStateManager.cpp#843
but `IMEContentObserver::TryToFlushPendingNotifications()` does noting because
its `mQueuedSender` is `nullptr`:
https://searchfox.org/mozilla-central/rev/5a362eb7d054740dc9d7c82c79a2efbc5f3e4776/dom/events/IMEContentObserver.cpp#1413

At the first point (`FlushMergeableNotifications()`), `mQueuedSender` is not
set by design.  However, this is not handled correctly in the last point
(`TryToFlushPendingNotifications()`).  If there are some pending notifications,
it needs to create a sender by itself and make it run.

Then, native IME handler starts to work normally with the focused editor.  I.e.,
this is a bug of that `IMEContentObserver` is not ready for new focused editor
and native IME context is also not ready.  Th

--- a/dom/base/test/chrome/window_nsITextInputProcessor.xhtml
+++ b/dom/base/test/chrome/window_nsITextInputProcessor.xhtml
@@ -199,6 +199,20 @@ text
 /
 >
 <
+input
+id
+=
+"
+anotherInput
+"
+type
+=
+"
+text
+"
+/
+>
+<
 br
 /
 >
@@ -48069,6 +48083,331 @@ dumpUnexpectedNotifications
 }
 async
 function
+runFocusNotificationTestAfterDrop
+(
+)
+{
+const
+inputs
+=
+document
+.
+querySelectorAll
+(
+"
+input
+[
+type
+=
+text
+]
+"
+)
+;
+inputs
+[
+0
+]
+.
+value
+=
+"
+abc
+"
+;
+inputs
+[
+1
+]
+.
+value
+=
+"
+"
+;
+const
+TIP
+=
+createTIP
+(
+)
+;
+let
+notifications
+=
+[
+]
+;
+let
+waitingNextNotification
+;
+function
+callback
+(
+aTIP
+aNotification
+)
+{
+if
+(
+aTIP
+!
+=
+TIP
+)
+{
+return
+true
+;
+}
+switch
+(
+aNotification
+.
+type
+)
+{
+case
+"
+request
+-
+to
+-
+commit
+"
+:
+aTIP
+.
+commitComposition
+(
+)
+;
+break
+;
+case
+"
+request
+-
+to
+-
+cancel
+"
+:
+aTIP
+.
+cancelComposition
+(
+)
+;
+break
+;
+case
+"
+notify
+-
+focus
+"
+:
+case
+"
+notify
+-
+blur
+"
+:
+notifications
+.
+push
+(
+aNotification
+.
+type
+)
+;
+break
+;
+}
+return
+true
+;
+}
+inputs
+[
+0
+]
+.
+focus
+(
+)
+;
+TIP
+.
+beginInputTransactionForTests
+(
+window
+callback
+)
+;
+inputs
+[
+0
+]
+.
+select
+(
+)
+;
+try
+{
+notifications
+=
+[
+]
+;
+await
+synthesizePlainDragAndDrop
+(
+{
+srcSelection
+:
+SpecialPowers
+.
+wrap
+(
+inputs
+[
+0
+]
+)
+.
+editor
+.
+selection
+destElement
+:
+inputs
+[
+1
+]
+}
+)
+;
+}
+catch
+(
+ex
+)
+{
+ok
+(
+false
+runFocusNotificationTestAfterDrop
+:
+unexpected
+error
+during
+DnD
+(
+{
+ex
+.
+message
+}
+)
+)
+;
+return
+;
+}
+is
+(
+document
+.
+activeElement
+inputs
+[
+1
+]
+"
+runFocusNotificationTestAfterDrop
+:
+Dropping
+to
+the
+second
+<
+input
+>
+should
+make
+it
+focused
+"
+)
+;
+ok
+(
+notifications
+.
+length
+>
+1
+"
+runFocusNotificationTestAfterDrop
+:
+At
+least
+two
+notifications
+should
+be
+fired
+"
+)
+;
+if
+(
+notifications
+.
+length
+>
+0
+)
+{
+is
+(
+notifications
+[
+notifications
+.
+length
+-
+1
+]
+"
+notify
+-
+focus
+"
+"
+runFocusNotificationTestAfterDrop
+:
+focus
+notification
+should
+'
+ve
+been
+fired
+at
+last
+"
+)
+;
+}
+}
+async
+function
 runTests
 (
 )
@@ -48128,6 +48467,11 @@ await
 runCallbackTests
 (
 true
+)
+;
+await
+runFocusNotificationTestAfterDrop
+(
 )
 ;
 await
