Bug 1727844 - part 1: Stop enabling blink-compat white-space normalizer at running mochitests r=m_kato
It was enabled for working on implementing blink-compat white-space normalizer,
but currently nobody works on it actively.  Therefore, we should disable it
at running mochitests for detecting any regressions in the default settings.

Differential Revision: https://phabricator.services.mozilla.com/D123868

UltraBlame original commit: 8d167b18b7903f60ee07f1af7a19cef61fa43fb8

--- a/editor/libeditor/tests/test_bug1094000.html
+++ b/editor/libeditor/tests/test_bug1094000.html
@@ -1172,9 +1172,35 @@ is
 editor7
 .
 innerHTML
+SpecialPowers
+.
+getBoolPref
+(
+"
+editor
+.
+white_space_normalization
+.
+blink_compatible
+"
+)
+?
 "
 <
 br
+>
+"
+:
+"
+<
+span
+>
+<
+br
+>
+<
+/
+span
 >
 "
 "
@@ -1316,12 +1342,38 @@ todo_isnot
 editor8
 .
 innerHTML
+SpecialPowers
+.
+getBoolPref
+(
+"
+editor
+.
+white_space_normalization
+.
+blink_compatible
+"
+)
+?
 "
 <
 br
 >
 <
 span
+>
+<
+/
+span
+>
+"
+:
+"
+<
+span
+>
+<
+br
 >
 <
 /
