--- a/editor/libeditor/tests/test_bug455992.html
+++ b/editor/libeditor/tests/test_bug455992.html
@@ -583,11 +583,41 @@ is
 e
 .
 innerHTML
+SpecialPowers
+.
+getBoolPref
+(
+"
+editor
+.
+white_space_normalization
+.
+blink_compatible
+"
+)
+|
+|
+e
+.
+tagName
+=
+=
+"
+SPAN
+"
+?
 "
 X
 &
 nbsp
 ;
+"
+:
+"
+X
+<
+br
+>
 "
 msg
 +
