--- a/editor/libeditor/tests/test_htmleditor_keyevent_handling.html
+++ b/editor/libeditor/tests/test_htmleditor_keyevent_handling.html
@@ -1820,23 +1820,53 @@ is
 aElement
 .
 innerHTML
+(
+(
+)
+=
+>
+{
+if
+(
 aIsTabbable
 |
 |
 aIsReadonly
-?
+)
+{
+return
 "
 a
 "
-:
+;
+}
+if
+(
 aIsPlaintext
-?
+)
+{
+return
 "
 a
 \
 t
 "
-:
+;
+}
+return
+SpecialPowers
+.
+getBoolPref
+(
+"
+editor
+.
+white_space_normalization
+.
+blink_compatible
+"
+)
+?
 "
 a
 &
@@ -1849,6 +1879,27 @@ nbsp
 nbsp
 ;
 "
+:
+"
+a
+&
+nbsp
+;
+&
+nbsp
+;
+&
+nbsp
+;
+<
+br
+>
+"
+;
+}
+)
+(
+)
 aDescription
 +
 "
@@ -7197,23 +7248,65 @@ is
 aElement
 .
 innerHTML
+(
+(
+)
+=
+>
+{
+if
+(
 aIsReadonly
-?
+)
+{
+return
 "
 "
-:
+;
+}
+if
+(
 aIsPlaintext
-?
+)
+{
+return
 "
 Mozilla
 "
-:
+;
+}
+return
+SpecialPowers
+.
+getBoolPref
+(
+"
+editor
+.
+white_space_normalization
+.
+blink_compatible
+"
+)
+?
 "
 Mozilla
 &
 nbsp
 ;
 "
+:
+"
+Mozilla
+<
+br
+>
+"
+;
+}
+)
+(
+)
 aDescription
 +
 "
