Bug 1727484 - Convert the "Send Tab to Device" string in the tab context menu to title case. r=Gijs,fluent-reviewers
Differential Revision: https://phabricator.services.mozilla.com/D124131

UltraBlame original commit: ab5dd8130e531132ddb42dd8ee52b055b24a7fd7

--- a/browser/base/content/main-popupset.inc.xhtml
+++ b/browser/base/content/main-popupset.inc.xhtml
@@ -785,6 +785,42 @@ ui
 -
 item
 "
+data
+-
+lazy
+-
+l10n
+-
+id
+=
+"
+tab
+-
+context
+-
+send
+-
+tabs
+-
+to
+-
+device
+"
+data
+-
+l10n
+-
+args
+=
+'
+{
+"
+tabCount
+"
+:
+1
+}
+'
 >
 <
 menupopup
