Bug 1724792 - Migrate main-popupset.inc.xhtml to Fluent. r=emalysz,fluent-reviewers,flod
Differential Revision: https://phabricator.services.mozilla.com/D124082

UltraBlame original commit: d4fac675bc657b372007bc10b7e7a5b99e43cbf1

--- a/browser/base/content/main-popupset.inc.xhtml
+++ b/browser/base/content/main-popupset.inc.xhtml
@@ -3911,39 +3911,18 @@ event
 >
 <
 menuitem
-#
-ifdef
-XP_WIN
-label
+data
+-
+l10n
+-
+id
 =
 "
-&
-editPopupSettings
-.
-label
-;
-"
-#
-else
-label
-=
-"
-&
-editPopupSettingsUnix
-.
-label
-;
-"
-#
-endif
-accesskey
-=
-"
-&
-editPopupSettings
-.
-accesskey
-;
+edit
+-
+popup
+-
+settings
 "
 oncommand
 =
