Bug 1725922 [wpt PR 30034] - Increase delay in location-protocol-setter-non-broken-weird.html, a=testonly
Automatic update from web-platform-tests
Increase delay in location-protocol-setter-non-broken-weird.html

The location-protocol-setter-non-broken-weird.html web platform test was
flaky because sometimes the navigation would not complete before the
delay.

Increase the delay from 500ms to 4000ms to allow the navigation to
reliably complete.

Remove flaky test expectations.

BUG=1192215

Change-Id: Ic312ad36bbffaa40834d136ba34c7a2480d43939
Reviewed-on: https://chromium-review.googlesource.com/c/chromium/src/+/3090401
Reviewed-by: Yoichi Osato <yoichiochromium.org>
Commit-Queue: Adam Rice <riceachromium.org>
Cr-Commit-Position: refs/heads/master{#912483}

--

wpt-commits: 114026aecffef77fa157e47793f8cf3725f429b0
wpt-pr: 30034

UltraBlame original commit: ac0ba87f6e2f2402771d7ef8f0b43f66677e8be9

--- a/testing/web-platform/tests/html/browsers/history/the-location-interface/location-protocol-setter-non-broken-weird.html
+++ b/testing/web-platform/tests/html/browsers/history/the-location-interface/location-protocol-setter-non-broken-weird.html
@@ -284,8 +284,27 @@ t
 done
 (
 )
+/
+/
+Experimentally
+4
+seconds
+is
+long
+enough
+for
+the
+navigation
+to
+/
+/
+complete
+if
+it
+happens
+.
 }
-500
+4000
 )
 }
 "
