Bug 1840497 - Use Ahem and replace Test Text with XXpp so we can detect the rotation. r=dholbert
Use Ahem font to reduce the amount of antialiasing, so we can remove the
fuzzy annotation from Gecko.

Also, replace `Test Text` with `XXpp` so we can easily detect that rotation
actually happened (since 'p' is one of only a few characters that has its own
glyph in Ahem that renders differently and can be visually distinguished from
other letters).

Differential Revision: https://phabricator.services.mozilla.com/D186502

UltraBlame original commit: 91e34e9014a0d10e204411ee9b922996ec6dfb1d

--- a/testing/web-platform/tests/css/css-transforms/transform3d-preserve3d-001-ref.html
+++ b/testing/web-platform/tests/css/css-transforms/transform3d-preserve3d-001-ref.html
@@ -68,6 +68,41 @@ name
 "
 >
 <
+link
+rel
+=
+"
+stylesheet
+"
+href
+=
+"
+/
+fonts
+/
+ahem
+.
+css
+"
+>
+<
+style
+>
+div
+{
+font
+:
+25px
+/
+1
+Ahem
+;
+}
+<
+/
+style
+>
+<
 /
 head
 >
@@ -96,8 +131,7 @@ height
 ;
 "
 >
-Test
-Text
+XXpp
 <
 /
 div
