--- a/testing/web-platform/tests/css/css-transforms/transform3d-preserve3d-001.html
+++ b/testing/web-platform/tests/css/css-transforms/transform3d-preserve3d-001.html
@@ -111,6 +111,24 @@ property
 "
 >
 <
+link
+rel
+=
+"
+stylesheet
+"
+href
+=
+"
+/
+fonts
+/
+ahem
+.
+css
+"
+>
+<
 meta
 name
 =
@@ -159,6 +177,23 @@ ref
 .
 html
 "
+>
+<
+style
+>
+div
+{
+font
+:
+25px
+/
+1
+Ahem
+;
+}
+<
+/
+style
 >
 <
 /
@@ -255,8 +290,7 @@ height
 ;
 "
 >
-Test
-Text
+XXpp
 <
 /
 div
