Bug 1838085 - Use Ahem and remove fuzzy tolerance for transform-input-009.html. r=dholbert
Use Ahem font to reduce the amount of antialiasing, so we can try to remove
the fuzzy annotation from this test file.

Differential Revision: https://phabricator.services.mozilla.com/D186735

UltraBlame original commit: ebe7c3e8c3bf917bf8b73757f4d38ca17a963045

--- a/testing/web-platform/tests/css/css-transforms/transform-input-009-ref.html
+++ b/testing/web-platform/tests/css/css-transforms/transform-input-009-ref.html
@@ -44,10 +44,35 @@ name
 "
 >
 <
+link
+rel
+=
+"
+stylesheet
+"
+href
+=
+"
+/
+fonts
+/
+ahem
+.
+css
+"
+>
+<
 style
 >
 input
 {
+font
+:
+25px
+/
+1
+Ahem
+;
 margin
 :
 10px
