Bug 1839726 [wpt PR 40680] - Updated border-image-13 test and removed border-image-14 test, a=testonly
Automatic update from web-platform-tests
Updated border-image-13 test and removed border-image-14 test (#40680)

* border-image-14 is replaced by border-image-repeat-round-003
* border-image-13 is renamed, updated metadata, and added a reference
--

wpt-commits: 5dd9ba684a0e5e74ecde2463a399083d3c13167b
wpt-pr: 40680

UltraBlame original commit: 15f016340e76159d780a1f2ac95e0871efa21713

--- a/testing/web-platform/tests/css/css-backgrounds/border-image-013.html
+++ b/testing/web-platform/tests/css/css-backgrounds/border-image-013.html
@@ -23,49 +23,24 @@ utf
 title
 >
 CSS
-Border
+Backgrounds
 and
-Background
+Borders
+Test
 :
 border
 -
 image
-#
-13
-border
--
-image
 -
 repeat
+:
+repeat
+(
+basic
+)
 <
 /
 title
->
-<
-meta
-name
-=
-"
-assert
-"
-content
-=
-"
-Test
-for
-the
-border
--
-image
--
-repeat
-property
-with
-the
-value
-repeat
-"
-/
 >
 <
 link
@@ -92,7 +67,29 @@ patonnier
 .
 net
 "
+>
+<
+link
+rel
+=
+"
+match
+"
+href
+=
+"
+reference
 /
+border
+-
+image
+-
+013
+-
+ref
+.
+html
+"
 >
 <
 link
@@ -121,8 +118,6 @@ css3
 background
 /
 #
-the
--
 border
 -
 image
@@ -217,6 +212,16 @@ made
 of
 green
 dots
+and
+<
+strong
+>
+no
+red
+<
+/
+strong
+>
 .
 <
 /
