Bug 1846346 [wpt PR 41256] - Improved 5 border-image-* tests and created references for them, a=testonly
Automatic update from web-platform-tests
Improved 5 border-image-* tests and created references

--

wpt-commits: bce102584648874209c5ec1171493355dc41f168
wpt-pr: 41256

UltraBlame original commit: bc8a01cf72e97fe5a66e564476ba56288b58e155

--- a/testing/web-platform/tests/css/css-backgrounds/border-image-slice-006.htm
+++ b/testing/web-platform/tests/css/css-backgrounds/border-image-slice-006.htm
@@ -1,950 +1,387 @@
 <
 !
-D
-O
-C
-T
-Y
-P
-E
-h
-t
-m
-l
-P
-U
-B
-L
-I
-C
+DOCTYPE
+html
+PUBLIC
 "
 -
 /
 /
-W
-3
-C
+W3C
 /
 /
-D
-T
-D
-X
-H
-T
-M
-L
+DTD
+XHTML
 1
 .
 0
-S
-t
-r
-i
-c
-t
+Strict
 /
 /
-E
-N
+EN
 "
 "
-h
-t
-t
-p
+http
 :
 /
 /
-w
-w
-w
+www
 .
-w
-3
+w3
 .
-o
-r
-g
+org
 /
-T
-R
+TR
 /
-x
-h
-t
-m
-l
-1
+xhtml1
 /
-D
-T
-D
+DTD
 /
-x
-h
-t
-m
-l
-1
+xhtml1
 -
-s
-t
-r
-i
-c
-t
+strict
 .
-d
-t
-d
+dtd
 "
 >
 <
-h
-t
-m
-l
-x
-m
-l
-n
-s
+html
+xmlns
 =
 "
-h
-t
-t
-p
+http
 :
 /
 /
-w
-w
-w
+www
 .
-w
-3
+w3
 .
-o
-r
-g
+org
 /
-1
-9
-9
-9
+1999
 /
-x
-h
-t
-m
-l
+xhtml
 "
 >
 <
-h
-e
-a
-d
+head
 >
 <
-t
-i
-t
-l
-e
+title
 >
-C
-S
-S
-T
-e
-s
-t
+CSS
+Background
+and
+Borders
+Test
 :
-T
-h
-e
+The
 '
-b
-o
-r
-d
-e
-r
+border
 -
-i
-m
-a
-g
-e
+image
 -
-s
-l
-i
-c
-e
+slice
 '
-p
-r
-o
-p
-e
-r
-t
-y
-w
-i
-t
-h
+property
+with
 '
-1
-0
-0
+100
 %
 '
+as
 a
-s
-a
-v
-a
-l
-u
-e
+value
 <
 /
-t
-i
-t
-l
-e
+title
 >
 <
-l
-i
-n
-k
-r
-e
-l
+link
+rel
 =
 "
-a
-u
-t
-h
-o
-r
+author
 "
-t
-i
-t
-l
-e
+title
 =
 "
-M
-i
-c
-r
-o
-s
-o
-f
-t
+Microsoft
 "
-h
-r
-e
-f
+href
 =
 "
-h
-t
-t
-p
+http
 :
 /
 /
-w
-w
-w
+www
 .
-m
-i
-c
-r
-o
-s
-o
-f
-t
+microsoft
 .
-c
-o
-m
+com
 /
 "
 /
 >
 <
-l
-i
-n
-k
-r
-e
-l
+link
+rel
 =
 "
-h
-e
-l
-p
+help
 "
-h
-r
-e
-f
+href
 =
 "
-h
-t
-t
-p
+http
 :
 /
 /
-w
-w
-w
+www
 .
-w
-3
+w3
 .
-o
-r
-g
+org
 /
-T
-R
+TR
 /
-c
-s
-s
-3
+css3
 -
-b
-a
-c
-k
-g
-r
-o
-u
-n
-d
+background
 /
 #
-t
-h
-e
+the
 -
-b
-o
-r
-d
-e
-r
+border
 -
-i
-m
-a
-g
-e
+image
 -
-s
-l
-i
-c
-e
+slice
 "
 /
 >
 <
-m
-e
-t
-a
-n
-a
-m
-e
+link
+rel
 =
 "
-f
-l
-a
-g
-s
+match
 "
-c
-o
-n
-t
-e
-n
-t
+href
 =
 "
-i
-m
-a
-g
-e
-"
+reference
 /
->
-<
-m
-e
-t
-a
-n
-a
-m
-e
-=
-"
-a
-s
-s
-e
-r
-t
-"
-c
-o
-n
-t
-e
-n
-t
-=
-"
-T
-h
-i
-s
-t
-e
-s
-t
-c
-h
-e
-c
-k
-s
-t
-h
-a
-t
-i
-f
-t
-h
-e
-s
-u
-m
-o
-f
-t
-h
-e
-r
-i
-g
-h
-t
-a
-n
-d
-l
-e
-f
-t
-w
-i
-d
-t
-h
-s
-o
-f
-t
-h
-e
-r
-e
-g
-i
-o
-n
-s
-g
-i
-v
-e
-n
-b
-y
-t
-h
-e
-'
-b
-o
-r
-d
-e
-r
+border
 -
-i
-m
-a
-g
-e
+image
 -
-s
-l
-i
-c
-e
-'
-v
-a
-l
-u
-e
-s
-i
-s
-e
-q
-u
-a
-l
-t
-o
-o
-r
-g
-r
-e
-a
-t
-e
-r
-t
-h
-a
-n
-t
-h
-e
-w
-i
-d
-t
-h
-o
-f
-t
-h
-e
-i
-m
-a
-g
-e
-t
-h
-e
-i
-m
-a
-g
-e
-s
-f
-o
-r
-t
-h
-e
-t
-o
-p
-a
-n
-d
-b
-o
-t
-t
-o
-m
-e
-d
-g
-e
-a
-n
-d
-t
-h
-e
-m
-i
-d
-d
-l
-e
-p
-a
-r
-t
-a
-r
-e
-e
-m
-p
-t
-y
+slice
+-
+006
+-
+ref
 .
-A
-n
-a
-l
-o
-g
-o
-u
-s
-l
-y
-f
-o
-r
-t
-h
-e
-t
-o
-p
-a
-n
-d
-b
-o
-t
-t
-o
-m
-v
-a
-l
-u
-e
-s
+html
+"
+/
+>
+<
+meta
+name
+=
+"
+flags
+"
+content
+=
+"
+"
+/
+>
+<
+meta
+name
+=
+"
+assert
+"
+content
+=
+"
+This
+test
+checks
+that
+if
+the
+sum
+of
+the
+right
+and
+left
+widths
+of
+the
+regions
+given
+by
+the
+'
+border
+-
+image
+-
+slice
+'
+values
+is
+equal
+to
+or
+greater
+than
+the
+width
+of
+the
+image
+the
+images
+for
+the
+top
+and
+bottom
+edge
+and
+the
+middle
+part
+are
+empty
+.
+Analogously
+for
+the
+top
+and
+bottom
+values
 .
 "
 /
 >
 <
-s
-t
-y
-l
-e
-t
-y
-p
-e
+style
+type
 =
 "
-t
-e
-x
-t
+text
 /
-c
-s
-s
+css
 "
 >
-d
-i
-v
+div
 {
-b
-o
-r
-d
-e
-r
+border
 :
-3
-0
-p
-x
-d
-o
-u
-b
-l
-e
-r
-e
-d
+30px
+double
+red
 ;
-b
-o
-r
-d
-e
-r
+border
 -
-i
-m
-a
-g
-e
+image
 -
-s
-l
-i
-c
-e
+slice
 :
-1
-0
-0
+100
 %
 ;
-b
-o
-r
-d
-e
-r
+border
 -
-i
-m
-a
-g
-e
+image
 -
-s
-o
-u
-r
-c
-e
+source
 :
-u
-r
-l
+url
 (
 "
-s
-u
-p
-p
-o
-r
-t
+support
 /
-g
-r
-e
-e
-n
-_
-c
-o
-l
-o
-r
+green_color
 .
-p
-n
-g
+png
 "
 )
 ;
-h
-e
-i
-g
-h
-t
+height
 :
-1
-0
-0
-p
-x
+100px
 ;
-m
-a
-r
-g
-i
-n
+margin
 :
-5
-0
-p
-x
+50px
 ;
-w
-i
-d
-t
-h
+width
 :
-1
-0
-0
-p
-x
+100px
 ;
 }
 <
 /
-s
-t
-y
-l
-e
+style
 >
 <
 /
-h
-e
-a
-d
+head
 >
 <
-b
-o
-d
-y
+body
 >
 <
 p
 >
-T
-e
-s
-t
-p
-a
-s
-s
-e
-s
-i
-f
-t
-h
-e
-r
-e
-a
-r
-e
-f
-o
-u
-r
-i
-d
-e
-n
-t
-i
-c
-a
-l
-g
-r
-e
-e
-n
-s
-q
-u
-a
-r
-e
-s
-a
-n
-d
-n
-o
-r
-e
-d
-v
-i
-s
-i
-b
-l
-e
-o
-n
-t
-h
-e
-p
-a
-g
-e
+Test
+passes
+if
+there
+are
+four
+identical
+green
+squares
+and
+<
+strong
+>
+no
+red
+<
+/
+strong
+>
 .
 <
 /
 p
 >
 <
-d
-i
-v
+div
 >
 <
 /
-d
-i
-v
+div
 >
 <
 /
-b
-o
-d
-y
+body
 >
 <
 /
-h
-t
-m
-l
+html
 >
