--- a/testing/web-platform/tests/css/css-backgrounds/border-image-width-001.htm
+++ b/testing/web-platform/tests/css/css-backgrounds/border-image-width-001.htm
@@ -1,1137 +1,624 @@
 <
 !
-D
-O
-C
-T
-Y
-P
-E
-h
-t
-m
-l
-P
-U
-B
-L
-I
-C
+DOCTYPE
+html
+PUBLIC
 "
 -
 /
 /
-W
-3
-C
+W3C
 /
 /
-D
-T
-D
-X
-H
-T
-M
-L
+DTD
+XHTML
 1
 .
 0
-S
-t
-r
-i
-c
-t
+Strict
 /
 /
-E
-N
+EN
 "
 "
-h
-t
-t
-p
+http
 :
 /
 /
-w
-w
-w
+www
 .
-w
-3
+w3
 .
-o
-r
-g
+org
 /
-T
-R
+TR
 /
-x
-h
-t
-m
-l
-1
+xhtml1
 /
-D
-T
-D
+DTD
 /
-x
-h
-t
-m
-l
-1
+xhtml1
 -
-s
-t
-r
-i
-c
-t
+strict
 .
-d
-t
-d
+dtd
 "
 >
 <
-h
-t
-m
-l
-x
-m
-l
-n
-s
+html
+xmlns
 =
 "
-h
-t
-t
-p
+http
 :
 /
 /
-w
-w
-w
+www
 .
-w
-3
+w3
 .
-o
-r
-g
+org
 /
-1
-9
-9
-9
+1999
 /
-x
-h
-t
-m
-l
+xhtml
 "
 >
 <
-h
-e
-a
-d
+head
 >
 <
-t
-i
-t
-l
-e
+title
 >
-C
-S
-S
-T
-e
-s
-t
+CSS
+Background
+and
+Borders
+Test
 :
-T
-h
-e
+The
 '
-b
-o
-r
-d
-e
-r
+border
 -
-i
-m
-a
-g
-e
+image
 -
-w
-i
-d
-t
-h
+width
 '
-p
-r
-o
-p
-e
-r
-t
-y
-w
-i
-t
-h
-f
-o
-u
-r
-n
-u
-m
-b
-e
-r
-s
+property
+with
+four
+numbers
+as
 a
-s
-a
-v
-a
-l
-u
-e
+value
 <
 /
-t
-i
-t
-l
-e
+title
 >
 <
-l
-i
-n
-k
-r
-e
-l
+link
+rel
 =
 "
-a
-u
-t
-h
-o
-r
+author
 "
-t
-i
-t
-l
-e
+title
 =
 "
-M
-i
-c
-r
-o
-s
-o
-f
-t
+Microsoft
 "
-h
-r
-e
-f
+href
 =
 "
-h
-t
-t
-p
+http
 :
 /
 /
-w
-w
-w
+www
 .
-m
-i
-c
-r
-o
-s
-o
-f
-t
+microsoft
 .
-c
-o
-m
+com
 /
 "
 /
 >
 <
-l
-i
-n
-k
-r
-e
-l
+link
+rel
 =
 "
-h
-e
-l
-p
+help
 "
-h
-r
-e
-f
+href
 =
 "
-h
-t
-t
-p
+http
 :
 /
 /
-w
-w
-w
+www
 .
-w
-3
+w3
 .
-o
-r
-g
+org
 /
-T
-R
+TR
 /
-c
-s
-s
-3
+css3
 -
-b
-a
-c
-k
-g
-r
-o
-u
-n
-d
+background
 /
 #
-t
-h
-e
+the
 -
-b
-o
-r
-d
-e
-r
+border
 -
-i
-m
-a
-g
-e
+image
 -
-w
-i
-d
-t
-h
+width
 "
 /
 >
 <
-m
-e
-t
-a
-n
-a
-m
-e
+link
+rel
 =
 "
-f
-l
-a
-g
-s
+match
 "
-c
-o
-n
-t
-e
-n
-t
+href
 =
 "
-i
-m
-a
-g
-e
+reference
+/
+border
+-
+image
+-
+width
+-
+001
+-
+ref
+.
+html
 "
 /
 >
 <
-m
-e
-t
-a
-n
-a
-m
-e
+meta
+name
 =
 "
-a
-s
-s
-e
-r
-t
+flags
 "
-c
-o
-n
-t
-e
-n
-t
+content
 =
 "
-T
-h
-i
-s
-t
-e
-s
-t
-c
-h
-e
-c
-k
-s
-t
-h
+"
+/
+>
+<
+meta
+name
+=
+"
+assert
+"
+content
+=
+"
+This
+test
+checks
+that
+four
+numbers
+as
 a
-t
-f
-o
-u
-r
-n
-u
-m
-b
-e
-r
-s
-a
-s
-a
-v
-a
-l
-u
-e
-o
-f
+value
+of
 '
-b
-o
-r
-d
-e
-r
+border
 -
-i
-m
-a
-g
-e
+image
 -
-w
-i
-d
-t
-h
+width
 '
-s
-p
-e
-c
-i
-f
-y
-o
-f
-f
-s
-e
-t
-s
-t
-h
-a
-t
-a
-r
-e
-u
-s
-e
-d
-t
-o
-d
-i
-v
-i
-d
-e
-t
-h
-e
-b
-o
-r
-d
-e
-r
-i
-m
-a
-g
-e
-a
-r
-e
-a
-i
-n
-t
-o
-n
-i
-n
-e
-p
-a
-r
-t
-s
+specify
+offsets
+that
+are
+used
+to
+divide
+the
+border
+image
+area
+into
+nine
+parts
 .
-T
-h
-e
-y
-r
-e
-p
-r
-e
-s
-e
-n
-t
-i
-n
-w
-a
-r
-d
-d
-i
-s
-t
-a
-n
-c
-e
-s
-f
-r
-o
-m
-t
-h
-e
-t
-o
-p
-r
-i
-g
-h
-t
-b
-o
-t
-t
-o
-m
-a
-n
-d
-l
-e
-f
-t
-s
-i
-d
-e
-s
-o
-f
-t
-h
-e
-b
-o
-r
-d
-e
-r
-i
-m
-a
-g
-e
-a
-r
-e
-a
+They
+represent
+inward
+distances
+from
+the
+top
+right
+bottom
+and
+left
+sides
+of
+the
+border
+image
+area
 .
-N
-u
-m
-b
-e
-r
-s
-r
-e
-p
-r
-e
-s
-e
-n
-t
-m
-u
-l
-t
-i
-p
-l
-e
-s
-o
-f
-t
-h
-e
-c
-o
-r
-r
-e
-s
-p
-o
-n
-d
-i
-n
-g
-c
-o
-m
-p
-u
-t
-e
-d
-b
-o
-r
-d
-e
-r
+Numbers
+represent
+multiples
+of
+the
+corresponding
+computed
+border
 -
-w
-i
-d
-t
-h
+width
 .
+Percentages
+refer
+to
+the
+size
+of
+the
+border
+image
+area
+:
+the
+width
+of
+the
+area
+for
+horizontal
+offsets
+the
+height
+for
+vertical
+offsets
 "
 /
 >
 <
-s
-t
-y
-l
-e
-t
-y
-p
-e
+style
+type
 =
 "
-t
-e
-x
-t
+text
 /
-c
-s
-s
+css
 "
 >
-#
-t
-e
-s
-t
+div
+.
+subtest
 {
-b
-a
-c
-k
-g
-r
-o
-u
-n
-d
+background
 -
-c
-o
-l
-o
-r
+color
 :
-r
-e
-d
+red
 ;
-b
-o
-r
-d
-e
-r
+border
 :
-1
-0
-p
-x
-d
-o
-u
-b
-l
-e
-r
-e
-d
+10px
+double
+red
 ;
-b
-o
-r
-d
-e
-r
+border
 -
-i
-m
-a
-g
-e
+image
 -
-s
-l
-i
-c
-e
+slice
 :
-1
-0
+10
 ;
-b
-o
-r
-d
-e
-r
+border
 -
-i
-m
-a
-g
-e
+image
 -
-s
-o
-u
-r
-c
-e
+source
 :
-u
-r
-l
+url
 (
 "
-s
-u
-p
-p
-o
-r
-t
+support
 /
-g
-r
-e
-e
-n
-_
-c
-o
-l
-o
-r
+green_color
 .
-p
-n
-g
+png
 "
 )
 ;
-b
-o
-r
-d
-e
-r
+height
+:
+100px
+;
+margin
+:
+8px
+auto
+8px
+0px
+;
+width
+:
+100px
+;
+}
+#
+subtest1
+{
+border
 -
-i
-m
-a
-g
-e
+image
 -
-w
-i
-d
-t
-h
+width
 :
 5
 4
 3
 2
 ;
-h
-e
-i
-g
-h
-t
-:
-2
-0
-0
-p
-x
-;
-m
-a
-r
-g
-i
-n
-:
-5
-0
-p
-x
-;
-w
-i
-d
-t
-h
-:
-2
-0
-0
-p
-x
-;
 }
-d
-i
-v
-d
-i
-v
+#
+subtest2
 {
-b
-a
-c
-k
-g
-r
-o
-u
-n
-d
+border
 -
-c
-o
-l
-o
-r
+image
+-
+width
 :
-l
-i
-m
-e
+50px
+10px
 ;
-h
-e
-i
-g
-h
-t
+}
+#
+subtest3
+{
+border
+-
+image
+-
+width
 :
-1
-4
-0
-p
-x
+40
+%
+20
+%
 ;
-m
-a
-r
-g
-i
-n
+height
 :
-4
-0
-p
-x
-1
-0
-p
-x
+115px
 ;
-w
-i
-d
-t
-h
+width
 :
-1
-6
-0
-p
-x
+90px
+;
+}
+#
+subtest4
+{
+border
+-
+image
+-
+slice
+:
+20
+40
+;
+border
+-
+image
+-
+width
+:
+auto
+;
+}
+div
+div
+{
+background
+-
+color
+:
+lime
+;
+}
+div
+#
+subtest1
+div
+div
+#
+subtest3
+div
+{
+height
+:
+75px
+;
+margin
+:
+20px
+5px
+;
+width
+:
+80px
+;
+}
+div
+#
+subtest2
+div
+{
+height
+:
+60px
+;
+margin
+:
+20px
+0px
+;
+width
+:
+100px
+;
+}
+div
+#
+subtest4
+div
+{
+height
+:
+90px
+;
+margin
+:
+5px
+15px
+;
+width
+:
+70px
 ;
 }
 <
 /
-s
-t
-y
-l
-e
+style
 >
 <
 /
-h
-e
-a
-d
+head
 >
 <
-b
-o
-d
-y
+body
 >
 <
-p
->
-T
-e
-s
-t
-p
-a
-s
-s
-e
-s
-i
-f
-t
-h
-e
-r
-e
-i
-s
-a
-l
-i
-m
-e
-r
-e
-c
-t
-a
-n
-g
-l
-e
-i
-n
-s
-i
-d
-e
-g
-r
-e
-e
-n
-s
-q
-u
-a
-r
-e
-a
-n
-d
-n
-o
-r
-e
-d
-v
-i
-s
-i
-b
-l
-e
-o
-n
-t
-h
-e
-p
-a
-g
-e
-.
-<
-/
-p
->
-<
-d
-i
-v
-i
-d
+div
+class
 =
 "
-t
-e
-s
-t
+subtest
+"
+id
+=
+"
+subtest1
 "
 >
 <
-d
-i
-v
+div
 >
 <
 /
-d
-i
-v
+div
 >
 <
 /
-d
-i
-v
+div
+>
+<
+div
+class
+=
+"
+subtest
+"
+id
+=
+"
+subtest2
+"
+>
+<
+div
 >
 <
 /
-b
-o
-d
-y
+div
 >
 <
 /
-h
-t
-m
-l
+div
+>
+<
+div
+class
+=
+"
+subtest
+"
+id
+=
+"
+subtest3
+"
+>
+<
+div
+>
+<
+/
+div
+>
+<
+/
+div
+>
+<
+div
+class
+=
+"
+subtest
+"
+id
+=
+"
+subtest4
+"
+>
+<
+div
+>
+<
+/
+div
+>
+<
+/
+div
+>
+<
+/
+body
+>
+<
+/
+html
 >
