Bug 1850293 - Make editable states not intrinsic. r=smaug,masayuki
This one is tricky because form controls, though I think I got it right...

This fixes a pre-existing bug where we're not following the spec for readonly
inside content-editable.

I filed this as bug 1850390 but other browsers match the spec so add a test and
fix it while at it. This allows cheaper checks for readonlyness in a couple
places.

Differential Revision: https://phabricator.services.mozilla.com/D186896

UltraBlame original commit: 4b02c73577248a3f3b90fbda89385060436efd96

--- a/testing/web-platform/tests/html/semantics/selectors/pseudo-classes/readwrite-readonly.html
+++ b/testing/web-platform/tests/html/semantics/selectors/pseudo-classes/readwrite-readonly.html
@@ -401,6 +401,105 @@ p
 div
 >
 <
+div
+id
+=
+set5
+>
+<
+div
+id
+=
+cd1
+contenteditable
+>
+<
+p
+id
+=
+p3
+>
+<
+/
+p
+>
+<
+input
+id
+=
+ci1
+readonly
+>
+<
+input
+id
+=
+ci2
+disabled
+>
+<
+input
+id
+=
+ci3
+>
+<
+input
+id
+=
+ci4
+>
+<
+textarea
+id
+=
+ct1
+readonly
+>
+<
+/
+textarea
+>
+<
+textarea
+id
+=
+ct2
+disabled
+>
+<
+/
+textarea
+>
+<
+textarea
+id
+=
+ct3
+>
+<
+/
+textarea
+>
+<
+textarea
+id
+=
+ct4
+>
+<
+/
+textarea
+>
+<
+/
+div
+>
+<
+/
+div
+>
+<
 script
 >
 testSelectorIdsMatch
@@ -1391,6 +1490,75 @@ that
 are
 editing
 hosts
+"
+)
+;
+document
+.
+designMode
+=
+"
+off
+"
+;
+testSelectorIdsMatch
+(
+"
+#
+set5
+:
+read
+-
+write
+"
+[
+"
+cd1
+"
+"
+p3
+"
+"
+ci3
+"
+"
+ci4
+"
+"
+ct3
+"
+"
+ct4
+"
+]
+"
+The
+:
+read
+-
+write
+pseudo
+-
+class
+must
+match
+elements
+that
+are
+inside
+editing
+hosts
+but
+not
+match
+inputs
+and
+textareas
+inside
+that
+aren
+'
+t
 "
 )
 ;
