Bug 1851343 [wpt PR 41782] - Fix html/semantics/embedded-content/media-elements/location-of-the-media-resource/currentSrc.html, a=testonly
Automatic update from web-platform-tests
Fix html/semantics/embedded-content/media-elements/location-of-the-media-resource/currentSrc.html (#41782)

The flakiness was caused by the 0s timer sometimes firing before the media task had a chance to run til completion.
Avoid this non-determinism by waiting for loadstart event before scheduling the 0s timer.
--

wpt-commits: 9a06a7e69f13ce6e1e3087c6d1d5097769682b25
wpt-pr: 41782

UltraBlame original commit: 94d80b4192a8a046883568498703d0c7d82f5adc

--- a/testing/web-platform/tests/html/semantics/embedded-content/media-elements/location-of-the-media-resource/currentSrc.html
+++ b/testing/web-platform/tests/html/semantics/embedded-content/media-elements/location-of-the-media-resource/currentSrc.html
@@ -160,6 +160,17 @@ currentSrc
 '
 )
 ;
+e
+.
+addEventListener
+(
+'
+loadstart
+'
+function
+(
+)
+{
 t
 .
 step_timeout
@@ -210,6 +221,8 @@ done
 0
 )
 ;
+}
+)
 }
 tagName
 +
@@ -281,6 +294,17 @@ currentSrc
 '
 )
 ;
+e
+.
+addEventListener
+(
+'
+loadstart
+'
+function
+(
+)
+{
 t
 .
 step_timeout
@@ -329,6 +353,9 @@ done
 ;
 }
 0
+)
+;
+}
 )
 ;
 }
