Bug 1851404 [wpt PR 41788] - Add CSP related WPT tests for Sync XHR, a=testonly
Automatic update from web-platform-tests
Add CSP related WPT tests for Sync XHR

I copied three connect-src-xmlhttprequest-* test files to
connect-src-syncxmlhttprequest-*, and changed the tests to use sync XHR
by setting the third argument of open() to false.

Change-Id: I07222d901de6a34ebfb11838e7cf0923c50216bd
Reviewed-on: https://chromium-review.googlesource.com/c/chromium/src/+/4837957
Reviewed-by: Kenichi Ishibashi <bashichromium.org>
Commit-Queue: Tsuyoshi Horo <horochromium.org>
Cr-Commit-Position: refs/heads/main{#1191943}

--

wpt-commits: 7a7b4f8a284594fbda930c8224e9c9dce9c25e2e
wpt-pr: 41788

UltraBlame original commit: dcd31c330c706760f7d25185519d1077e7b31642

--- a/testing/web-platform/tests/content-security-policy/connect-src/connect-src-syncxmlhttprequest-allowed.sub.html
+++ b/testing/web-platform/tests/content-security-policy/connect-src/connect-src-syncxmlhttprequest-allowed.sub.html
@@ -49,6 +49,27 @@ src
 '
 self
 '
+http
+:
+/
+/
+{
+{
+host
+}
+}
+:
+{
+{
+ports
+[
+http
+]
+[
+0
+]
+}
+}
 ;
 script
 -
@@ -71,13 +92,9 @@ connect
 -
 src
 -
-xmlhttprequest
+syncxmlhttprequest
 -
-redirect
--
-to
--
-blocked
+allowed
 <
 /
 title
@@ -136,32 +153,7 @@ logs
 =
 [
 "
-PASS
-XMLHttpRequest
-.
-send
-(
-)
-did
-not
-follow
-the
-disallowed
-redirect
-.
-"
-"
-TEST
-COMPLETE
-"
-"
-violated
--
-directive
-=
-connect
--
-src
+Pass
 "
 ]
 '
@@ -197,18 +189,6 @@ alerts
 script
 >
 <
-script
-id
-=
-"
-inject_here
-"
->
-<
-/
-script
->
-<
 /
 head
 >
@@ -233,28 +213,21 @@ e
 log
 (
 "
-violated
--
-directive
-=
+Fail
 "
-+
-e
-.
-violatedDirective
 )
 ;
 }
 )
 ;
+try
+{
 var
 xhr
 =
 new
 XMLHttpRequest
 ;
-try
-{
 xhr
 .
 open
@@ -263,21 +236,10 @@ open
 GET
 "
 "
-/
-common
-/
-redirect
-.
-py
-?
-location
-=
 http
 :
 /
 /
-www1
-.
 {
 {
 host
@@ -296,19 +258,22 @@ http
 }
 }
 /
-content
--
-security
--
-policy
+xmlhttprequest
 /
-support
+resources
 /
-fail
+get
 .
-asis
+txt
 "
-true
+false
+)
+;
+log
+(
+"
+Pass
+"
 )
 ;
 }
@@ -320,150 +285,11 @@ e
 log
 (
 "
-FAIL
-"
-+
-"
-XMLHttpRequest
-.
-open
-(
-)
-should
-not
-throw
-an
-exception
-.
+Fail
 "
 )
 ;
 }
-xhr
-.
-onload
-=
-function
-(
-)
-{
-if
-(
-xhr
-.
-responseText
-=
-=
-"
-FAIL
-"
-)
-{
-log
-(
-"
-FAIL
-"
-+
-"
-XMLHttpRequest
-.
-send
-(
-)
-should
-fail
-to
-follow
-the
-disallowed
-redirect
-.
-"
-)
-;
-}
-else
-{
-log
-(
-"
-PASS
-"
-+
-"
-XMLHttpRequest
-.
-send
-(
-)
-did
-not
-follow
-the
-disallowed
-redirect
-.
-"
-)
-;
-}
-log
-(
-"
-TEST
-COMPLETE
-"
-)
-;
-}
-;
-xhr
-.
-onerror
-=
-function
-(
-)
-{
-log
-(
-"
-PASS
-"
-+
-"
-XMLHttpRequest
-.
-send
-(
-)
-did
-not
-follow
-the
-disallowed
-redirect
-.
-"
-)
-;
-log
-(
-"
-TEST
-COMPLETE
-"
-)
-;
-}
-;
-xhr
-.
-send
-(
-)
-;
 <
 /
 script
