--- a/testing/web-platform/tests/content-security-policy/connect-src/connect-src-syncxmlhttprequest-blocked.sub.html
+++ b/testing/web-platform/tests/content-security-policy/connect-src/connect-src-syncxmlhttprequest-blocked.sub.html
@@ -71,11 +71,7 @@ connect
 -
 src
 -
-xmlhttprequest
--
-redirect
--
-to
+syncxmlhttprequest
 -
 blocked
 <
@@ -136,23 +132,7 @@ logs
 =
 [
 "
-PASS
-XMLHttpRequest
-.
-send
-(
-)
-did
-not
-follow
-the
-disallowed
-redirect
-.
-"
-"
-TEST
-COMPLETE
+Pass
 "
 "
 violated
@@ -190,18 +170,6 @@ alerts
 =
 [
 ]
-"
->
-<
-/
-script
->
-<
-script
-id
-=
-"
-inject_here
 "
 >
 <
@@ -247,14 +215,14 @@ violatedDirective
 }
 )
 ;
+try
+{
 var
 xhr
 =
 new
 XMLHttpRequest
 ;
-try
-{
 xhr
 .
 open
@@ -263,15 +231,6 @@ open
 GET
 "
 "
-/
-common
-/
-redirect
-.
-py
-?
-location
-=
 http
 :
 /
@@ -306,39 +265,17 @@ support
 /
 fail
 .
-asis
+png
 "
-true
+false
 )
 ;
-}
-catch
-(
-e
-)
-{
-log
-(
-"
-FAIL
-"
-+
-"
-XMLHttpRequest
+xhr
 .
-open
+send
 (
-)
-should
-not
-throw
-an
-exception
-.
-"
 )
 ;
-}
 xhr
 .
 onload
@@ -347,77 +284,14 @@ function
 (
 )
 {
-if
-(
-xhr
-.
-responseText
-=
-=
-"
-FAIL
-"
-)
-{
 log
 (
 "
-FAIL
-"
-+
-"
-XMLHttpRequest
-.
-send
-(
-)
-should
-fail
-to
-follow
-the
-disallowed
-redirect
-.
+Fail
 "
 )
 ;
 }
-else
-{
-log
-(
-"
-PASS
-"
-+
-"
-XMLHttpRequest
-.
-send
-(
-)
-did
-not
-follow
-the
-disallowed
-redirect
-.
-"
-)
-;
-}
-log
-(
-"
-TEST
-COMPLETE
-"
-)
-;
-}
-;
 xhr
 .
 onerror
@@ -429,41 +303,25 @@ function
 log
 (
 "
-PASS
-"
-+
-"
-XMLHttpRequest
-.
-send
-(
-)
-did
-not
-follow
-the
-disallowed
-redirect
-.
-"
-)
-;
-log
-(
-"
-TEST
-COMPLETE
+Pass
 "
 )
 ;
 }
-;
-xhr
-.
-send
+}
+catch
 (
+e
+)
+{
+log
+(
+"
+Pass
+"
 )
 ;
+}
 <
 /
 script
