--- a/testing/web-platform/tests/content-security-policy/connect-src/connect-src-syncxmlhttprequest-redirect-to-blocked.sub.html
+++ b/testing/web-platform/tests/content-security-policy/connect-src/connect-src-syncxmlhttprequest-redirect-to-blocked.sub.html
@@ -71,7 +71,7 @@ connect
 -
 src
 -
-xmlhttprequest
+syncxmlhttprequest
 -
 redirect
 -
@@ -137,6 +137,7 @@ logs
 [
 "
 PASS
+Sync
 XMLHttpRequest
 .
 send
@@ -308,7 +309,7 @@ fail
 .
 asis
 "
-true
+false
 )
 ;
 }
@@ -324,6 +325,7 @@ FAIL
 "
 +
 "
+Sync
 XMLHttpRequest
 .
 open
@@ -347,18 +349,6 @@ function
 (
 )
 {
-if
-(
-xhr
-.
-responseText
-=
-=
-"
-FAIL
-"
-)
-{
 log
 (
 "
@@ -366,6 +356,7 @@ FAIL
 "
 +
 "
+Sync
 XMLHttpRequest
 .
 send
@@ -382,32 +373,6 @@ redirect
 "
 )
 ;
-}
-else
-{
-log
-(
-"
-PASS
-"
-+
-"
-XMLHttpRequest
-.
-send
-(
-)
-did
-not
-follow
-the
-disallowed
-redirect
-.
-"
-)
-;
-}
 log
 (
 "
@@ -418,12 +383,18 @@ COMPLETE
 ;
 }
 ;
+try
+{
 xhr
 .
-onerror
-=
-function
+send
 (
+)
+;
+}
+catch
+(
+e
 )
 {
 log
@@ -433,6 +404,7 @@ PASS
 "
 +
 "
+Sync
 XMLHttpRequest
 .
 send
@@ -457,13 +429,6 @@ COMPLETE
 )
 ;
 }
-;
-xhr
-.
-send
-(
-)
-;
 <
 /
 script
