--- a/editor/libeditor/tests/test_bug520189.html
+++ b/editor/libeditor/tests/test_bug520189.html
@@ -1935,15 +1935,9 @@ moz
 -
 document
 url
+-
+prefix
 (
-http
-:
-/
-/
-example
-.
-com
-/
 )
 {
 }
@@ -6706,35 +6700,8 @@ function
 (
 )
 {
-SpecialPowers
-.
-pushPrefEnv
-(
-{
-"
-set
-"
-:
-[
-[
-"
-layout
-.
-css
-.
-moz
--
-document
-.
-content
-.
-enabled
-"
-true
-]
-]
-}
 doNextTest
+(
 )
 ;
 }
