Bug 1792650 - Update tests. r=spidermonkey-reviewers,mgaudet
Differential Revision: https://phabricator.services.mozilla.com/D188230

UltraBlame original commit: 9451f52d9cd46b212f5f42107525f45dd29b7bcb

--- a/js/xpconnect/tests/chrome/test_xrayToJS.xhtml
+++ b/js/xpconnect/tests/chrome/test_xrayToJS.xhtml
@@ -2756,6 +2756,9 @@ isExtensible
 "
 hasOwn
 "
+"
+groupBy
+"
 ]
 )
 ;
@@ -3425,6 +3428,9 @@ Map
 constructorProps
 (
 [
+"
+groupBy
+"
 Symbol
 .
 species
