Bug 1853042 - Run clipboard cache tests with both `widget.clipboard.use-cached-data.enabled` flipped on and off; r=spohl
Differential Revision: https://phabricator.services.mozilla.com/D188125

UltraBlame original commit: c1ff628c78b40c08e15fe5031ded2d9863683b1b

--- a/widget/tests/test_clipboard_cache_chrome.html
+++ b/widget/tests/test_clipboard_cache_chrome.html
@@ -184,35 +184,12 @@ application
 javascript
 "
 >
-const
-isSupportGetFromCachedTransferable
-=
-Services
-.
-prefs
-.
-getBoolPref
-(
-"
-widget
-.
-clipboard
-.
-use
--
-cached
--
-data
-.
-enabled
-"
-)
-;
 function
 testClipboardCache
 (
 aClipboardType
 aAsync
+aIsSupportGetFromCachedTransferable
 )
 {
 add_task
@@ -222,6 +199,35 @@ test_clipboard_get
 (
 )
 {
+info
+(
+test_clipboard_get
+{
+aAsync
+?
+"
+async
+"
+:
+"
+"
+}
++
+with
+pref
+{
+aIsSupportGetFromCachedTransferable
+?
+"
+enabled
+"
+:
+"
+disabled
+"
+}
+)
+;
 const
 string
 =
@@ -324,7 +330,7 @@ text
 foo
 data
 to
-transerable
+transferable
 )
 ;
 addStringToTransferable
@@ -338,7 +344,43 @@ string
 trans
 )
 ;
-is
+/
+/
+XXX
+macOS
+caches
+the
+transferable
+to
+implement
+kSelectionCache
+type
+too
+/
+/
+so
+it
+behaves
+differently
+than
+other
+types
+.
+if
+(
+aClipboardType
+=
+=
+clipboard
+.
+kSelectionCache
+&
+&
+!
+aIsSupportGetFromCachedTransferable
+)
+{
+todo_is
 (
 getClipboardData
 (
@@ -349,7 +391,7 @@ foo
 "
 aClipboardType
 )
-isSupportGetFromCachedTransferable
+aIsSupportGetFromCachedTransferable
 ?
 string
 :
@@ -366,6 +408,38 @@ aClipboardType
 }
 )
 ;
+}
+else
+{
+is
+(
+getClipboardData
+(
+"
+text
+/
+foo
+"
+aClipboardType
+)
+aIsSupportGetFromCachedTransferable
+?
+string
+:
+null
+Check
+text
+/
+foo
+data
+on
+clipboard
+{
+aClipboardType
+}
+)
+;
+}
 info
 (
 Should
@@ -517,7 +591,43 @@ aClipboardType
 again
 )
 ;
-is
+/
+/
+XXX
+macOS
+caches
+the
+transferable
+to
+implement
+kSelectionCache
+type
+too
+/
+/
+so
+it
+behaves
+differently
+than
+other
+types
+.
+if
+(
+aClipboardType
+=
+=
+clipboard
+.
+kSelectionCache
+&
+&
+!
+aIsSupportGetFromCachedTransferable
+)
+{
+todo_is
 (
 getClipboardData
 (
@@ -528,7 +638,7 @@ foo
 "
 aClipboardType
 )
-isSupportGetFromCachedTransferable
+aIsSupportGetFromCachedTransferable
 ?
 string
 :
@@ -546,6 +656,39 @@ aClipboardType
 again
 )
 ;
+}
+else
+{
+is
+(
+getClipboardData
+(
+"
+text
+/
+foo
+"
+aClipboardType
+)
+aIsSupportGetFromCachedTransferable
+?
+string
+:
+null
+Check
+text
+/
+foo
+data
+on
+clipboard
+{
+aClipboardType
+}
+again
+)
+;
+}
 info
 (
 Clean
@@ -562,15 +705,51 @@ cleanupAllClipboard
 )
 ;
 }
-add_setup
-(
 function
-init
+runClipboardCacheTests
+(
+aIsSupportGetFromCachedTransferable
+)
+{
+add_task
+(
+async
+function
+setup
 (
 )
 {
 cleanupAllClipboard
 (
+)
+;
+await
+SpecialPowers
+.
+pushPrefEnv
+(
+{
+set
+:
+[
+[
+"
+widget
+.
+clipboard
+.
+use
+-
+cached
+-
+data
+.
+enabled
+"
+aIsSupportGetFromCachedTransferable
+]
+]
+}
 )
 ;
 }
@@ -606,6 +785,25 @@ test_clipboard_hasDataMatchingFlavors
 (
 )
 {
+info
+(
+test_clipboard_hasDataMatchingFlavors
+with
+pref
++
+{
+aIsSupportGetFromCachedTransferable
+?
+"
+enabled
+"
+:
+"
+disabled
+"
+}
+)
+;
 const
 trans
 =
@@ -759,7 +957,43 @@ type
 }
 )
 ;
-is
+/
+/
+XXX
+macOS
+caches
+the
+transferable
+to
+implement
+kSelectionCache
+type
+too
+/
+/
+so
+it
+behaves
+differently
+than
+other
+types
+.
+if
+(
+type
+=
+=
+clipboard
+.
+kSelectionCache
+&
+&
+!
+aIsSupportGetFromCachedTransferable
+)
+{
+todo_is
 (
 clipboard
 .
@@ -774,7 +1008,7 @@ foo
 ]
 type
 )
-isSupportGetFromCachedTransferable
+aIsSupportGetFromCachedTransferable
 Check
 if
 there
@@ -790,6 +1024,41 @@ type
 }
 )
 ;
+}
+else
+{
+is
+(
+clipboard
+.
+hasDataMatchingFlavors
+(
+[
+"
+text
+/
+foo
+"
+]
+type
+)
+aIsSupportGetFromCachedTransferable
+Check
+if
+there
+is
+text
+/
+foo
+flavor
+on
+clipboard
+{
+type
+}
+)
+;
+}
 /
 /
 Check
@@ -947,7 +1216,43 @@ type
 }
 )
 ;
-is
+/
+/
+XXX
+macOS
+caches
+the
+transferable
+to
+implement
+kSelectionCache
+type
+too
+/
+/
+so
+it
+behaves
+differently
+than
+other
+types
+.
+if
+(
+type
+=
+=
+clipboard
+.
+kSelectionCache
+&
+&
+!
+aIsSupportGetFromCachedTransferable
+)
+{
+todo_is
 (
 clipboard
 .
@@ -962,7 +1267,7 @@ foo
 ]
 type
 )
-isSupportGetFromCachedTransferable
+aIsSupportGetFromCachedTransferable
 Check
 if
 there
@@ -978,6 +1283,41 @@ type
 }
 )
 ;
+}
+else
+{
+is
+(
+clipboard
+.
+hasDataMatchingFlavors
+(
+[
+"
+text
+/
+foo
+"
+]
+type
+)
+aIsSupportGetFromCachedTransferable
+Check
+if
+there
+is
+text
+/
+foo
+flavor
+on
+clipboard
+{
+type
+}
+)
+;
+}
 info
 (
 Write
@@ -1089,6 +1429,7 @@ testClipboardCache
 (
 type
 false
+aIsSupportGetFromCachedTransferable
 )
 ;
 /
@@ -1103,11 +1444,91 @@ testClipboardCache
 (
 type
 true
+aIsSupportGetFromCachedTransferable
 )
 ;
 }
 )
 ;
+}
+/
+/
+Test
+not
+get
+data
+from
+clipboard
+cache
+.
+runClipboardCacheTests
+(
+false
+)
+;
+/
+/
+Test
+get
+data
+from
+clipboard
+cache
+.
+/
+/
+XXX
+:
+Linux
+doesn
+'
+t
+yet
+use
+nsBaseClipboard
+so
+it
+doesn
+'
+t
+support
+getting
+data
+from
+/
+/
+clipboard
+cache
+bug
+1851817
+.
+if
+(
+!
+navigator
+.
+platform
+.
+includes
+(
+"
+Linux
+"
+)
+&
+&
+!
+SpecialPowers
+.
+isHeadless
+)
+{
+runClipboardCacheTests
+(
+true
+)
+;
+}
 <
 /
 script
