Bug 1817680 - Repeat GC when needed; r=dom-storage-reviewers,asuth
Differential Revision: https://phabricator.services.mozilla.com/D188561

UltraBlame original commit: ceee4d0a71175f5fe743ca163647e7d0f57fff0e

--- a/dom/indexedDB/test/test_file_os_delete.html
+++ b/dom/indexedDB/test/test_file_os_delete.html
@@ -587,6 +587,15 @@ flushPendingFileDeletions
 (
 )
 ;
+yield
+*
+assertEventuallyWithGC
+(
+function
+*
+(
+)
+{
 getCurrentUsage
 (
 grabFileUsageAndContinueHandler
@@ -598,10 +607,13 @@ endUsage
 yield
 undefined
 ;
-is
-(
+return
 endUsage
+=
+=
 startUsage
+;
+}
 "
 OS
 files
