Bug 1852352 [wpt PR 41889] - Bring clip-path-polygon-010.html up-to-date with the current spec, a=testonly
Automatic update from web-platform-tests
Bring clip-path-polygon-010.html up-to-date with the current spec

See interop-2023 test change proposal:
  https://github.com/web-platform-tests/interop/issues/409

Bug: 1457595
Change-Id: I42e93b76005e277ce5cb6ced021b37855d3e185f
Reviewed-on: https://chromium-review.googlesource.com/c/chromium/src/+/4850602
Auto-Submit: Philip Rogers <pdrchromium.org>
Commit-Queue: Xianzhu Wang <wangxianzhuchromium.org>
Reviewed-by: Xianzhu Wang <wangxianzhuchromium.org>
Cr-Commit-Position: refs/heads/main{#1194938}

--

wpt-commits: 4dd18031b2c1975d722f956483a6cd356574629a
wpt-pr: 41889

UltraBlame original commit: e871d3ac80fd42c22403854f51de40a15e7d0c81

--- a/testing/web-platform/tests/css/css-masking/clip-path/clip-path-polygon-010.html
+++ b/testing/web-platform/tests/css/css-masking/clip-path/clip-path-polygon-010.html
@@ -203,7 +203,7 @@ value
 should
 be
 '
-border
+content
 -
 box
 '
@@ -232,7 +232,7 @@ reference
 box
 .
 On
-sucess
+success
 you
 should
 see
@@ -355,18 +355,21 @@ path
 :
 polygon
 (
-0
-%
-25
+-
+75px
+-
+50
 %
 50
 %
-50px
-100px
-75
+-
+25px
+25px
+150
 %
-0
-150px
+-
+75px
+75px
 )
 fill
 -
